API Funcional + modificacoes do na raiz do projeto